--- a/.github/workflows/workflow2.yaml
+++ b/.github/workflows/workflow2.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Using Python3
-        uses: actions/setup-Python3@v3
+        uses: actions/setup-python
         with:
           python-version: 3.12.x
 
