--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -35,4 +35,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: gusantoz/DesafioDevOps:latest
+          tags: gusantoz/desafiodevops:latest
