--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }} #Corrigido
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
@@ -36,3 +36,17 @@ jobs:
           context: .
           push: true
           tags: gusantoz/desafiodevops:latest
+
+
+  test:
+    name: Rodar Testes Unitários
+    runs-on: ubuntu-latest
+
+    steps:
+      # Baixa o código do repositório para a VM
+      - name: Checkout do código
+        uses: actions/checkout@v4
+          
+      # Executa os testes unitários (baseado no seu test_app.py)
+      - name: Rodar testes com unittest
+        run: python -m unittest test_app.py
